--- a/DemoAPI/appsettings.json
+++ b/DemoAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "dbCon": "Persist Security Info=False;Initial Catalog=KironTest;User ID=DemoAPI_admin;Data Source=xxxxxxx;password=xxxxxxxx"
+    "dbCon": "Persist Security Info=False;Initial Catalog=xxxxxxxx;User ID=xxxxxxxxxx;Data Source=xxxxxxxxx;password=xxxxxxxxxx"
   },
   "AllowedHosts": "*",
   "Jwt": {
